# quench

./: .gitignore  .prettierignore  CNAME  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  grammar.js  hello.qnh  index.html  lerna.json  package.json  run.sh
.github/workflows/: ci.yml  publish.yml
assets/: cssMode.1199dc08.js  cssMode.65d62759.js  cssMode.f06cc6be.js  freemarker2.33769ab3.js  freemarker2.752a7414.js  freemarker2.e2e32c28.js  handlebars.58bef39b.js  handlebars.96344813.js  handlebars.e5f30d7d.js  html.1be573c3.js  html.7b1afae1.js  html.91170dcb.js  htmlMode.28158eed.js  htmlMode.7dfc9dba.js  htmlMode.eefaa133.js  index.28c1f34d.js  index.2f59a73d.js  index.8a5ff43e.js  index.9c0f5560.js  index.a6be3a2f.css  index.afa4b515.js  index.c4cfb313.css  index.f51c896b.js  javascript.38fce3ed.js  javascript.a1b0eb1d.js  javascript.d108e07b.js  jsonMode.0fcf8a44.js  jsonMode.9895747f.js  jsonMode.aad1c180.js  liquid.68261c39.js  liquid.6944fed4.js  liquid.d43e317b.js  python.660d539e.js  python.d2c3c59a.js  python.df30e40a.js  razor.1fd11968.js  razor.61e21654.js  razor.728f5005.js  tree-sitter-moss.0d43c6f8.wasm  tree-sitter-quench.73641ae3.wasm  (+9 more)
astring-quench/: .gitignore  package-lock.json  package.json
editors/code/: .eslintrc.json  .gitignore  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
editors/code/src/: extension.ts
editors/code/src/test/: runTest.ts
editors/code/src/test/suite/: extension.test.ts  index.ts
editors/code/syntaxes/: quench.tmLanguage.yaml
editors/vim/: README.md
examples/: args.js  args.qn  complicated.js  complicated.out.txt  complicated.qn  data.js  data.qn  errors.qn  hello.js  hello.qn  hello.txt  hello_syntax_errors.err.txt  hello_syntax_errors.qn  hello_syntax_errors.txt  numbers.qn  pure.js  pure.qn  scope.js  scope.qn
jsdeps/: .gitignore  README.md  package-lock.json  package.json
src/: codegen.rs  compiler.rs  db.rs  deps.rs  diagnosis.rs  estree.rs  lib.rs  loader.rs  lsp.rs  main.rs  opts.rs  parser.rs  stdlib.js  syntax.rs  text.rs
tests/: cli.rs  version.rs
tests/goldenfiles/: examples.yml  help.txt
tree-sitter-quench/: .gitignore  README.md  grammar.js  package-lock.json  package.json
tree-sitter-quench/corpus/: hello.txt
tree-sitter-quench/src/: binding.cc  grammar.json  node-types.json  parser.c
