[package]
name = "quench"
version = "0.3.0"
authors = ["Sam Estep <sam@samestep.com>"]
edition = "2018"
description = "A programming language."
repository = "https://github.com/quench-lang/quench"
license = "MIT"
categories = [
  "command-line-utilities",
  "compilers",
  "development-tools",
]
include = [
  "/astring-quench/node_modules/astring/LICENSE",
  "/astring-quench/node_modules/astring/dist/astring.min.js",
  "/build.rs",
  "/LICENSE",
  "/README.md",
  "/src",
  "/tree-sitter-quench/src",
]

[dependencies]
anyhow = "1"
deno_core = "0.82"
futures = "0.3"
im = "15"
lspower = "0.6"
rusty_v8 = "0.21"
salsa = "0.16"
serde_json = "1"
serde_v8 = "0.1"
slurp = "1"
structopt = "0.3"
strum = "0.20"
strum_macros = "0.20"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tree-sitter = "0.17"
url = "2"

[build-dependencies]
cc = "1"
vergen = "5"

[dev-dependencies]
assert_cmd = "1"
comrak = "0.10"
goldenfile = "1"
pretty_assertions = "0.7"
regex = "1"
toml = "0.5"
yaml-rust = "0.4"
