[package]
name = "quench"
version = "0.3.0"
authors = ["Sam Estep <sam@samestep.com>"]
edition = "2018"
description = "A programming language."
repository = "https://github.com/quench-lang/quench"
license = "MIT"
categories = [
  "command-line-utilities",
  "compilers",
]
include = [
  "/build.rs",
  "/jsdeps/node_modules/astring/dist/astring.min.js",
  "/jsdeps/node_modules/astring/LICENSE",
  "/jsdeps/node_modules/immutable/dist/immutable.es.js",
  "/jsdeps/node_modules/immutable/LICENSE",
  "/LICENSE",
  "/README.md",
  "/src",
  "/tree-sitter-quench/src",
]

[dependencies]
anyhow = "1"
deno_core = "0.83"
deno_runtime = "0.10"
either = {version = "1", features = ["serde"]}
futures = "0.3"
im = "15"
lspower = "0.6"
no_color = "0.1"
num = "0.4.0"
rusty_v8 = "0.21"
salsa = "0.16"
serde = "1"
serde_json = "1"
serde_v8 = "0.1"
structopt = "0.3"
strum = "0.20"
strum_macros = "0.20"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tree-sitter = "0.17"
url = "2"

[build-dependencies]
cc = "1"
vergen = "5"

[dev-dependencies]
assert_cmd = "1"
comrak = "0.10"
goldenfile = "1"
itertools = "0.10"
pretty_assertions = "0.7"
regex = "1"
serde_yaml = "0.8"
toml = "0.5"
